2005-03-31  Mike Kestner  <mkestner@novell.com>

	* glib/ManagedValue.cs : add null/NULL guarding to Copy, Free, 
	WrapObject, and ObjectForWrapper.  [Fixes #74197]

2005-03-30  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* parser/gapi2xml.pl : parse gst type macros.

2005-03-30  Anthony Taranto  <voltron@emptyrhetoric.com>

	* gtk/Widget.custom : cause Allocation.Set to call SizeUpdate().
	* gtk/glue/widget.c : remove gtksharp_gtk_widget_set_allocation().

2005-03-29  Mike Kestner  <mkestner@novell.com>

	* gtk/TreeStore.custom : fix a CLS incompliance in the Append
	Prepend, Insert, InsertBefore, and InsertAfter methods by obsoleting
	them and adding new *Node methods that are CLS compliant.
	[Fixes #73876]

2005-03-29  Mike Kestner  <mkestner@novell.com>

	* generator/Parser.cs : add symbol type='marshal' support.
	* gdk/Event.cs : add GetEvent method to wrap arbitrary events.
	* gdk/gdk-symbols.xml : make Event, EventAny, and EventNoExpose
	marshal symbols using Event.GetEvent (). [Fixes #74184]

2005-03-29  Mike Kestner  <mkestner@novell.com>

	* glib/Marshaller.cs : special case ucs4 "0" conversion.
	[Fixes #74175]

2005-03-28  Mike Kestner  <mkestner@novell.com>

	* gdk/Pixbuf.custom  : add FromDrawable static method and obsolete
	CreateFromNative, which should've been static.  [Fixes #74155]

2005-03-28  Mike Kestner  <mkestner@novell.com>

	* generator/Signal.cs  : Dispose the values passed to 
	g_signal_chain_from_overriden in base VM invocations. [Fixes #73522]

2005-03-25  Mike Kestner  <mkestner@novell.com>

	* */makefile.win32 : add gapi-cdecl-insert to assembly target.

2005-03-25  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : add CDeclCallback attrs to native dels.
	* generator/Signal.cs : add CDeclCallback attrs to native dels.

2005-03-25  Mike Kestner  <mkestner@novell.com>

	* */*.cs : tag native callback delegates with [CDeclCallback].
	* */*.custom : tag native callback delegates with [CDeclCallback].
