@@ -1215,10 +1215,14 @@ mcs -resource:image.jpg sample.cs
         <Parameter Name="resource" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>Loads a pixbuf from a resource string.</summary>
-        <param name="resource">a <see cref="T:System.String" /></param>
+        <summary>Loads a pixbuf from a resource file.</summary>
+        <param name="resource">the name of the resource</param>
         <returns>a <see cref="T:Gdk.Pixbuf" /></returns>
-        <remarks>TODO: Clarify.</remarks>
+        <remarks>
+	    This loads a pixbuf from a resource in the calling assembly. This is equivalent to
+	    using the <see cref="C:Gdk.Pixbuf(System.Reflection.Assembly, System.String)" />
+	    constructor with a <see langword="null" /> assembly.
+	</remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
