@@ -450,5 +450,58 @@ namespace GtkDemo
         <remarks>To be added</remarks>
       </Docs>
     </Member>
+    <Member MemberName="LoadFromResource">
+      <MemberSignature Language="C#" Value="public static Gdk.PixbufLoader LoadFromResource (string resource);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.PixbufLoader</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="resource" Type="System.String" />
+      </Parameters>
+      <Docs>
+        <summary>Loads a pixbuf from a resource file.</summary>
+        <param name="resource">the name of the resource</param>
+        <returns>a <see cref="T:Gdk.PixbufLoader" /></returns>
+        <remarks>
+	    This creates a pixbuf loader to load from a resource in the calling assembly.
+	    This is equivalent to using the
+	    <see cref="C:Gdk.PixbufLoader(System.Reflection.Assembly, System.String)" />
+	    constructor with a <see langword="null" /> assembly.
+	</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public PixbufLoader (System.IO.Stream stream);" />
+      <MemberType>Constructor</MemberType>
+      <ReturnValue />
+      <Parameters>
+        <Parameter Name="stream" Type="System.IO.Stream" />
+      </Parameters>
+      <Docs>
+        <summary>Loads a Pixbuf from a <see cref="T:System.IO.Stream" />.</summary>
+        <param name="stream">a <see cref="T:System.IO.Stream" /></param>
+        <returns>a <see cref="T:Gdk.PixbufLoader" /></returns>
+        <remarks>See also <see cref="C:Gdk.Pixbuf(System.IO.Stream)" /></remarks>
+      </Docs>
+    </Member>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public PixbufLoader (System.Reflection.Assembly assembly, string resource);" />
+      <MemberType>Constructor</MemberType>
+      <ReturnValue />
+      <Parameters>
+        <Parameter Name="assembly" Type="System.Reflection.Assembly" />
+        <Parameter Name="resource" Type="System.String" />
+      </Parameters>
+      <Docs>
+        <summary>Loads a Pixbuf embedded in an assembly</summary>
+        <param name="assembly">The <see cref="T:System.Reflection.Assembly" /> that contains the image.  
+<para>
+If the value is <see langword="null" />, the image will be looked up on the calling assembly.</para></param>
+        <param name="resource">The name given as the resource in the assembly</param>
+        <returns>a <see cref="T:Gdk.PixbufLoader" /> for the resource stream</returns>
+        <remarks>See also <see cref="C:Gdk.Pixbuf(System.Reflection.Assembly,System.String)" /></remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
