@@ -1,3 +1,10 @@
+2005-04-01  Dan Winship  <danw@novell.com>
+
+	* en/Gdk/Pixbuf.xml: 
+	* en/Gdk/PixbufAnimation.xml: 
+	* en/Gdk/PixbufLoader.xml: 
+	* en/Gtk/Image.xml: document new/updated stream/resource constructors
+
 2005-03-15  Dan Winship  <danw@novell.com>
 
 	* en/Gtk/NodeStore.xml (AddNode):
