@@ -1,3 +1,15 @@
+2005-03-31  Dan Winship  <danw@novell.com>
+
+	* gdk/PixbufLoader.custom: Implement System.IO.Stream and
+	resource-file constructors (using code formerly in Pixbuf.custom)
+
+	* gdk/Pixbuf.custom: Redo the stream and resource ctors in terms
+	of the PixbufLoader ones.
+
+	* gdk/PixbufAnimation.custom: Add stream and resource ctors
+
+	* gtk/Image.custom: Add stream and resource ctors
+
 2005-03-31  Mike Kestner  <mkestner@novell.com>
 
 	* glib/ManagedValue.cs : add null/NULL guarding to Copy, Free, 
